<resources>
    <string name="app_name">Visteon App</string>
    <string-array name="Departments">
        <item>Purchase</item>
        <item>Quality</item>
        <item>Tpm</item>
        <item>Logistics</item>
        <item>Production</item>
        <item>Method</item>
    </string-array>
    <string-array name="Shifts">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="aboutus">Visteon App is a productivity booster mobile app for android devices only
    developed by Oussama Dallali and Abdelmajid Nasr during Graduation internship supervised by ms.Mariem Boughdiri
    our App mainly consists of tasks management and temperature,humidity supervising with some other cool features like
    live chat and a To-Do-List to help every Visteon corporation employee with their daily duties </string>

    <string name="NotifyAll">Send to one person</string>
    <string name="doubleoptionCSID">type receiver\'s csID or Email</string>
    <string name="CurrentShift">CURRENT SHIFT: this field is optional</string>
    <string name="CurrentShift2">Receiving Shift: this field is optional</string>
    <string name="ChooseShift">Double tap to choose</string>
    <string name="passfield">Password</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="delete_confirmation">Confirmation</string>
    <string name="sureToDelete">Are you sure you want to delete the task</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirmation">Completed the task!..</string>
    <string name="sureToMarkAsComplete">Are you sure you want to mark this task as completed.</string>
    <string name="congrats_you_have_completed_the_task_successfully">Congrats!... You have completed the task successfully..</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>