<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_add_black_24dp"
            android:scaleType="centerCrop" />

        <TextView
            fontPath="fonts/nunito_extra_bold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="Add a task"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            tools:ignore="MissingPrefix" />

        <TextView
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="Fill the details below to add a task"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:textSize="18sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Task title"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:id="@+id/addTaskTitle"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Task description"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:id="@+id/addTaskDescription"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Task date"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:id="@+id/taskDate"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Receiver csID"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:hint="@string/doubleoptionCSID"
            android:id="@+id/taskcsID"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginLeft="3dp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/CurrentShift2"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            fontPath="fonts/nunito_light.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/btn_border"
            android:padding="10dp"
            android:hint="@string/ChooseShift"
            android:id="@+id/taskShiftReciever"
            tools:ignore="MissingPrefix" />

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/NCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/NotifyAll"></CheckBox>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addNewTask"
            android:text="Add task"
            android:layout_weight="1"
            android:background="@drawable/btn_background"
            android:textColor="#FBF2B6"
            android:layout_marginTop="40dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/back_button"
            android:layout_weight="1"
            android:text="Back"
            android:onClick="SendData"
            android:background="@drawable/btn_background"
            android:textColor="#FBF2B6"
            android:layout_marginTop="40dp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>