<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context="com.example.magasin_cms.SignUp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_Sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-medium"
                android:text="Sign Up"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_login"
                android:layout_marginTop="60dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="Name"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/Name"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="Email"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/Email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:hint="xxxx@visteon.com"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/CurrentShift"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/CurrentShift"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/ChooseShift"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="Phone"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="sans-serif-light"
                        android:text="Gender"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <RadioGroup
                        android:id="@+id/rad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/Male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:fontFamily="sans-serif-light"
                            android:text="Male"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="15sp"></RadioButton>

                        <RadioButton
                            android:id="@+id/Female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="15dp"
                            android:fontFamily="sans-serif-light"
                            android:text="Female"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="15sp"></RadioButton>

                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="Department"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/dep"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:hint="@string/ChooseShift"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="11dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/passfield"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/Spsd"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:password="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="Password confirmation"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/repsd"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:password="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>


            </LinearLayout>


            <Button
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/linlay1"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />



        </RelativeLayout>

    </RelativeLayout>



</RelativeLayout>
